CHANGELOG
===========
cody - created project
sam - created tasks model
sam - updated homepage to include remaining tasks and the table to tasks