@@ -3,3 +3,4 @@ CHANGELOG
 cody - created project
 sam - created tasks model
 sam - updated homepage to include remaining tasks and the table to tasks
+cody - Created the views/ Job 3
